yaml/mongodb-cluster/mongo.rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongo
