yaml/mongodb-cluster/mongo.service.yaml
apiVersion: v1
kind: Service
metadata:
 name: mongo
 namespace: mongo
 labels:
   name: mongo
spec:
 ports:
 - port: 27017
   protocal: TCP
 type: NodePort
 selector:
   role: mongo
